tests/contracts/snapshots/contracts__plugins__external_plugin_help_stderr_stdout.snap
---
source: crates/osp-cli/tests/contracts/plugins.rs
expression: stdout
---
hello plugin help text
