tests/contracts/snapshots/contracts__plugins__external_plugin_help_stdout.snap
---
source: crates/osp-cli/tests/contracts/plugins.rs
expression: help_flag_stdout.clone()
---
hello plugin help text
