tests/contracts/snapshots/contracts__plugins__plugin_messages_json_stderr.snap
---
source: tests/contracts/plugins/dispatch.rs
expression: sanitized
---
{
  "messages": [
    {
      "level": "warning",
      "text": "plugin-warning-line"
    }
  ]
}
