tests/contracts/snapshots/contracts__plugins__plugin_messages_json_stdout.snap
---
source: crates/osp-cli/tests/contracts/plugins.rs
expression: stdout
---
[
  {
    "message": "json-from-plugin"
  }
]
