tests/contracts/snapshots/contracts__plugins__plugin_non_zero_exit_stderr.snap
---
source: tests/contracts/plugins/dispatch.rs
expression: sanitized
---
<TIMESTAMP>Z  WARN osp_cli::plugin::dispatch: plugin command exited with non-zero status plugin_id=boom command=boom status_code=7 stderr=boom-from-stderr
- Command failed -------------------------------------------------------
  plugin boom exited with status 7: boom-from-stderr
  Try: inspect the plugin stderr output or rerun with -v/-vv for more
  context
------------------------------------------------------------------------
