tests/contracts/snapshots/contracts__plugins__provider_override_conflicted_commands_json.snap
---
source: tests/contracts/plugins.rs
assertion_line: 834
expression: sanitized
---
[
  {
    "name": "ranked",
    "about": "provider selection required; use --plugin-provider <plugin-id> or `osp plugins select-provider ranked <plugin-id>`",
    "provider": null,
    "providers": [
      "explicit-provider (explicit)",
      "env-provider (env)",
      "bundled-provider (bundled)",
      "user-provider (user)"
    ],
    "conflicted": true,
    "requires_selection": true,
    "selected_explicitly": false,
    "source": null,
    "auth_hint": null,
    "auth_visibility": null,
    "required_capabilities": [],
    "feature_flags": [],
    "subcommands": []
  }
]
