tests/contracts/snapshots/contracts__plugins__provider_selection_before_selection_stderr.snap
---
source: tests/contracts/plugins/provider_selection.rs
expression: sanitized
---
- Command failed -------------------------------------------------------
  command shared requires provider selection; available: alpha-provider
  (env), beta-provider (env); use --plugin-provider <plugin-id> or
  plugins select-provider shared <plugin-id>
------------------------------------------------------------------------
