tests/contracts/snapshots/contracts__plugins__provider_selection_selected_commands_json.snap
---
source: crates/osp-cli/tests/contracts/plugins.rs
expression: commands_stdout
---
[
  {
    "name": "shared",
    "about": "beta-provider plugin",
    "provider": "beta-provider",
    "providers": [
      "alpha-provider (env)",
      "beta-provider (env)"
    ],
    "conflicted": true,
    "requires_selection": false,
    "selected_explicitly": true,
    "source": "env",
    "auth_hint": null,
    "auth_visibility": null,
    "required_capabilities": [],
    "feature_flags": [],
    "subcommands": []
  }
]
